--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "The Effect of Age on Political Ideology"
 author: "Lenny Pische"
-description: "Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology"
+description: "Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology."
 output:
   distill::distill_article:
     self_contained: false
